# Fastapi-login

./: README.md  database.py  main.py  pyproject.toml
Backend/: .env  .gitignore  config.py  main.py  pyproject.toml
Backend/models/: user.py
Backend/utils/: __init__.py
Frontend/src/components/: Login.jsx
routes/: auth.py
